# claude-i-know-kungfu

./: .gitignore  .mcp.json  BENCHMARK.md  README.md
demos/: gleam.md  (+2 more)
server/: pyproject.toml
server/bench/: suite10_eval.json
server/bench/gleam/hard/expr_parser/: prompt.md
server/bench/gleam/suite10/collatz/: prompt.md
server/bench/gleam/suite10/count_even/: prompt.md
server/bench/gleam/suite10/digit_sum/: prompt.md
server/bench/gleam/suite10/eval_expr/: prompt.md
server/bench/gleam/suite10/fib/: prompt.md
server/bench/gleam/suite10/gcd_of/: prompt.md
server/bench/gleam/suite10/is_prime/: prompt.md
server/bench/gleam/suite10/largest/: prompt.md
server/bench/gleam/suite10/reverse_digits/: prompt.md
server/bench/gleam/suite10/total/: prompt.md
server/bench/gleam/test/double_list/: prompt.md
server/bench/gleam/test/list_length/: prompt.md
server/bench/gleam/test/list_max/: prompt.md
server/bench/gleam/test/list_product/: prompt.md
server/bench/gleam/train/list_reverse/: prompt.md
server/bench/gleam/train/sum_list/: prompt.md
server/kungfu/: __init__.py  _io.py  _log.py  bench.py  cards.py  config.py  learn.py  server.py  store.py  verify.py
server/sandbox/: README.md
server/sandbox/_base/: Dockerfile  verify.sh
server/sandbox/gleam/: Dockerfile  verify.sh
server/sandbox/julia/: Dockerfile  verify.sh
server/sandbox/oberon/: Dockerfile  verify.sh
server/sandbox/python/: Dockerfile  verify.sh
server/tests/: test_bench.py  test_cards.py  test_config.py  test_learn.py  test_review_fixes.py  test_store.py  test_verify.py
(+153 files in other folders)
