[project]
name = "kungfu-server"
version = "0.1.0"
description = "I Know KungFu — MCP server: the librarian (knowledge store), the verifier (Docker truth oracle), and the bench (learning-curve measurement). Never calls an LLM; all judgment stays with Claude."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "emircbngl", url = "https://github.com/emircbngl" }]
dependencies = [
  "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
kungfu-server = "kungfu.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kungfu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
